--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "main": "cqrs-tools-eventstore.js",
   "dependencies": {
     "node-uuid": "^1.4.3",
-    "protobufjs": "^4.0.0-b2"    
+    "protobufjs": "^4.0.0-b2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-env": "^0.4.4",
     "grunt-force-task": "^1.0.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-tslint": "^2.0.0",
     "grunt-typescript": "^0.6.1",
     "should": "^5.2.0",
     "tslint": "^2.1.1",
-    "typescript": "1.4.1"
+    "typescript": "1.4.1",
+    "winston": "^1.0.0"
   }
 }
