--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,17 +11,30 @@
         "cqrs-tools.ts"
     ],
     "files": [
-        "lib/commands.ts",
-        "lib/common.ts",
-        "lib/eventstore.ts",
-        "lib/iconnection.ts",
-        "lib/logger.ts",
+        "lib/Commands.ts",
+        "lib/ContentType.ts",
+        "lib/EventStore.ts",
+        "lib/ExpectedVersion.ts",
+        "lib/IConnection.ts",
+        "lib/Logger.ts",
+        "lib/Serializer.ts",
+        "lib/Settings.ts",
+        "lib/StreamPosition.ts",
+        "lib/TcpConnection.ts",
+        "lib/TcpPacket.ts",
         "lib/messages.ts",
-        "lib/serializer.ts",
-        "tests/commands.test.ts",
-        "tests/common.test.ts",
-        "tests/eventstore.test.ts",
-        "tests/messages.test.ts",
-        "tests/serializer.test.ts"
+        "lib/operations.ts",
+        "lib/operations/AppendToStreamOperation.ts",
+        "lib/operations/DeleteStreamOperation.ts",
+        "lib/operations/HeartbeatOperation.ts",
+        "lib/operations/IOperation.ts",
+        "lib/operations/OperationBase.ts",
+        "lib/operations/PingOperation.ts",
+        "lib/operations/ReadStreamForwardOperation.ts",
+        "lib/results.ts",
+        "tests/Commands.test.ts",
+        "tests/Messages.test.ts",
+        "tests/Serializer.test.ts",
+        "tests/TcpConnection.test.ts"
     ]
 }
